--- a/簡介.MD
+++ b/簡介.MD
@@ -105,11 +105,8 @@ python scripts/inference.py \
 - Windows 上 `bitsandbytes` 可能不可用；程式會自動 fallback。
 - CE 在 float32 計算更穩（即使啟用 bf16/fp16）。
 
-## 後續可擴充（與你確認後實作）
+## 後續可擴充
 - 訓練更進階的遮罩策略（兩段遮罩、comp/random 混合），複製自 dLLM‑RL 的 RL/SFT 流程，做成開關。
 - 分層或交替層級的 block 注意力策略（類 SDAR 的 per‑layer 規劃）。
 - 更豐富的取樣策略（動態閾值 unmask、置信‑溫度混合）。
-
----
-如要我直接將你的 HF SFT 數據集與 block 設定寫入 config.yaml，或將 `soft_ce` 調為預設損失，我可以一併幫你調整。也歡迎指出 dLLM‑RL 中某段具體策略（檔名/函式）要我精準移植為開關參數。
 
